--- a/config.toml
+++ b/config.toml
@@ -363,7 +363,7 @@ hasCJKLanguage = false
     hiddenFromSearch = false
     # whether to enable twemoji
     # 是否使用 twemoji
-    twemoji = false
+    twemoji = true
     # whether to enable lightgallery
     # 是否使用 lightgallery
     lightgallery = false
